# rust-auth

./: .env  Cargo.toml  README.md
src/: email.rs  jwt.rs  lib.rs  paseto.rs  tests.rs
templates/: email.html
templates/email/: verified.html
templates/email/account/: updated.html
templates/email/password/: switch-to-passwordless.html  updated.html
templates/email/password/reset/: api.html  web.html
templates/email/passwordless/: api.html  web.html
templates/email/verify/: api.html  verified.html  web.html
