[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bcrypt = "0.15.0"
chrono = "0.4.34"
jsonwebtoken = "9.2.0"

r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
rusqlite = "0.30.0"
rocket = {version = "0.5.0", features = ["json"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
uuid = "1.7.0"
lettre = "0.11.4"
