[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys = { path = "../rust-sys" }
bcrypt = "0.15.0"
chrono = "0.4.34"
jsonwebtoken = "9.2.0"

tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

lettre = "0.11.4"
handlebars = "5.1.0"
once_cell = "1.19.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "time",
] }
axum = "0.7.5"
axum-login = "0.15.0"
askama = "0.12.1"
